--- a/lefthook.yml
+++ b/lefthook.yml
@@ -6,25 +6,15 @@ pre-commit:
   commands:
     # common rules
     secretlint:
-      glob: "*"
+      glob: '*'
       run: npx secretlint --maskSecrets --secretlintignore .gitignore "{staged_files}"
     formatting:
-      glob: "*.{js,ts,jsx,tsx,md,mdx,json,yml}"
+      glob: '**/*.{js,ts,jsx,tsx,md,mdx,json,yml}'
       run: npx prettier --write "{staged_files}"
     # for docs edit rules
     textlint:
-      glob: "docs/**/*.{md,mdx}"
+      glob: '**/*.{md,mdx}'
       run: npx textlint --cache {staged_files}
-    docsBuild:
-      glob: "docs/**/*.{md,mdx}"
-      run: npx docusaurus build
-    # for konjacbot edit rules
-    # lint:
-    #   glob: 'scripts/**/*.{js,ts,jsx,tsx}'
-    #   run: npx next lint --max-warnings 0 --file {staged_files}
-    tsc:
-      glob: "scripts/**/*.{js,ts,jsx,tsx}"
-      run: npx tsc --noEmit -p ./tsconfig.json
 commit-msg:
   parallel: true
   commands:
