--- a/.textlintrc.yml
+++ b/.textlintrc.yml
@@ -4,8 +4,7 @@ plugins:
 filters:
   comments: true
 rules:
-  preset-bengo4:
-    sentence-length: false
+  preset-smarthr: true
   preset-ja-spacing:
     ja-space-between-half-and-full-width: false
   preset-ja-technical-writing:
