feat: add markdownlint settings #7

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -49,6 +49,10 @@ jobs:
           level: warning
           textlint_flags: '**/*.{md,mdx}'
 
+      # markdownlint
+      - name: Exec markdwonlint
+        run: 'npm run markdownlint'
+
       # キャッシュセーブ
       - name: Always Save Cache
         id: cache-save
