--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -8,7 +8,7 @@ on:
   pull_request:
     branches: [main]
     paths:
-      - '**/*.{md,mdx}'
+      - '**/*.md'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -48,6 +48,10 @@ jobs:
           reporter: github-pr-review
           level: warning
           textlint_flags: '**/*.{md,mdx}'
+
+      # markdownlint
+      - name: Exec markdwonlint
+        run: 'npm run markdownlint'
 
       # キャッシュセーブ
       - name: Always Save Cache
