docs(zenn-github-repo): add articles

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,5 @@
 {
-  "printWidth": 80,
+  "printWidth": 90,
   "tabWidth": 2,
   "useTabs": false,
   "semi": false,
@@ -14,5 +14,6 @@
   "insertPragma": false,
   "htmlWhitespaceSensitivity": "css",
   "embeddedLanguageFormatting": "auto",
-  "singleAttributePerLine": false
+  "singleAttributePerLine": false,
+  "proseWrap": "never"
 }
