--- a/.textlintrc.yml
+++ b/.textlintrc.yml
@@ -3,15 +3,20 @@ plugins:
   mdx: true
 filters:
   comments: true
+  allowlist:
+    allow:
+      - '-github'
 rules:
-  preset-smarthr: true
+  preset-smarthr:
+    ja-no-mixed-period: false
   preset-ja-spacing:
     ja-space-between-half-and-full-width: false
   preset-ja-technical-writing:
     sentence-length: false
     ja-no-mixed-period: false
-    no-mix-dearu-desumasu: false
     max-kanji-continuous-len: false
+    no-exclamation-question-mark: false
+    max-comma: false
   spellcheck-tech-word: true
   prh:
     rulePaths:
