--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "prettier": "^3.4.2",
     "secretlint": "^9.0.0",
     "textlint": "^14.4.2",
+    "textlint-filter-rule-allowlist": "^4.0.0",
     "textlint-filter-rule-comments": "^1.2.2",
     "textlint-plugin-mdx": "^1.0.1",
     "textlint-rule-preset-ja-spacing": "^2.4.3",
