--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -5,6 +5,10 @@ name: reviewdog
 # Controls when the action will run.
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
+  push:
+    branches: [main]
+    paths:
+      - '**/*.md'
   pull_request:
     branches: [main]
     paths:
