feat: Update dependabot.yml

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -24,6 +24,11 @@ updates:
       time: '10:00'
       timezone: Asia/Tokyo
     open-pull-requests-limit: 10
+    groups:
+      prod-dependency:
+        dependency-type: production
+      dev-dependency:
+        dependency-type: development
     commit-message:
       prefix: "Common"
       include: "scope"
